kubernetes/apps/external/kvm-leonis/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kvm-leonis
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
