kubernetes/apps/external/kvm-leonis/resources/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.bykaj.io/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app kvm-leonis
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  hostnames: ["leonis.kvm.home.${DOMAIN_NET}"]
  parentRefs:
    - name: envoy-services
      namespace: network
      sectionName: https-net-home-kvm
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: *app
          port: 80
